--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -11,6 +11,7 @@
       {{ trip.length }} only {{ trip.perPerson | currency: 'USD':'symbol' }} per person
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
+    <div *ngIf="isLoggedIn()"></div>
     <button (click)="editTrip(trip)" class="btn btn-info">Edit Trip</button>
   </div>
 </div>
