--- a/app_admin/src/app/trip-listing/trip-listing.component.html
+++ b/app_admin/src/app/trip-listing/trip-listing.component.html
@@ -1,10 +1,9 @@
-<!-- <pre>{{ trips | json }}</pre> -->
-<div>
-    <button (click)="addTrip()" class="btn btn-info">Add Trip</button>
-  </div>
+<div class="container">
+  <button class="btn btn-primary mb-3" (click)="addTrip()" *ngIf="isLoggedIn()">Add Trip</button>
+  <div *ngIf="message" class="alert alert-info">{{ message }}</div>
   <div class="row">
-    <div *ngFor="let trip of trips" class="col-md-4">
-      <app-trip-card [trip]="trip" class="card-deck mt-2"></app-trip-card>
+    <div class="col-12 col-md-6" *ngFor="let trip of trips">
+      <app-trip-card [trip]="trip"></app-trip-card>
     </div>
   </div>
-  
+</div>
